deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ${APP_NAME}

spec:
  replicas: 4

  selector:
    matchLabels:
      app: ${APP_NAME}

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      annotations:
        prometheus.io/port: "5000"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
      labels:
        app: ${APP_NAME}

    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: cr--credentials
      containers:
        - name: ${APP_NAME}
          image: cr.yandex/${REG_ID}/${APP_NAME}:${TAG}

          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5

          ports:
            - containerPort: 5000
