service.yml
apiVersion: v1
kind: Service

metadata:
  name: ${APP_NAME}-svc
  labels:
    app: ${APP_NAME}

spec:
  selector:
    app: ${APP_NAME}

  type: NodePort
  ports:
    - name: metrics
      protocol: TCP
      port: 80
      targetPort: 5000
