ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ${APP_NAME}-ingress
  namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: catchmemobbin.strangled.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}-svc
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-ingress
  namespace: monitoring

spec:
  ingressClassName: nginx
  rules:
    - host: grafana.catchmemobbin.strangled.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prometheus-ingress
  namespace: monitoring

spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.catchmemobbin.strangled.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: alertmanager-ingress
  namespace: monitoring

spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.catchmemobbin.strangled.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
